syntax = "proto3";

option go_package = "pb/gen";

import "validator.proto";
import "google/api/annotations.proto";

package ukama.network.v1;


service Nns { // The Node Name Service (like DNS)
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
    rpc List(ListRequest) returns (ListResponse) {
        option (google.api.http) = {
            post: "/v1/nns/list"
            body: "*"
        };
    }
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}


message GetRequest{
    string nodeId = 1;
}

message GetResponse{
    string ip = 1;
}


message SetRequest{
    string nodeId = 1  [(validator.field) = { string_not_empty: true}];
    string ip = 2  [(validator.field) = { string_not_empty: true,  regex: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$"}];
    string orgName = 3;
    string network = 4;
}

message SetResponse{
}


message ListResponse {
    repeated string ips  = 1;
}

message ListRequest{

}

message DeleteRequest{
    string nodeId = 1  [(validator.field) = { string_not_empty: true}];
}

message DeleteResponse{

}